--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,10 @@
 		<requiredpackage>com.woltlab.wcf.page.user.profile</requiredpackage>
 	</requiredpackages>
 	
+	<optionalpackages>
+		<optionalpackage file="optionals/de.easy-coding.wcf.projects.rails.tar.gz">de.easy-coding.wcf.projects.rails</optionalpackage>
+	</optionalpackages>
+	
 	<instructions type="install">
 		<files>files.tar</files>
 		<templates>templates.tar</templates>
@@ -31,11 +35,11 @@
 		<pagelocation>pagelocation.xml</pagelocation>
 		<languages languagecode="de">de.xml</languages>
 		<languages languagecode="en">en.xml</languages>
-		<options>options.xml</options>
 	</instructions>
 	
 	<instructions type="update" fromversion="0.1.0">
 		<files>files.tar</files>
 		<sql>update.sql</sql>
+		<options>options.xml</options>
 	</instructions>
 </package>
